1999-07-12  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (java_ensure_selector): If there exists selector 
	with same name as Java method check to see, if the types match.
	(java_directory_init): Initialize probeLibrary field of 
	SwarmEnvironment.
	(java_directory_init): Initialize ControlState... fields in
	SwarmEnvironment that correspond to Symbols ControlState...
	from simtoolsgui.

1999-07-11  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (java_directory_objc_find): Use getTypeImplemented
	to find out which protocol non-creatable object conforms to.
	(java_ensure_selector): Store global reference of a Java selector
	object to directory.

	* Program.m (_obj_initModule): Disable audit for implementations
	in creatable types.

1999-07-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* fcall_{objc,java}.m: Include swarmconfig.h.  Don't define
	anything unless USE_AVCALL is set.

1999-07-09  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m: Remove static from declarations of variables
	with prefix c_.
	Add new global variables with prefixes c_/m_/f_ standing
	for class/method/field objects.
	(create_class_refs): Add initialization for new global class 
	variables.
	(create_method_refs): Add new function. Intialize global method
	variables.
	(create_field_refs): Add new function. Intialize global field 
	variables.
	(java_directory_init): Call create_method_refs and 
	create_field_refs after create_class_refs.
	(java_ensure_selector): Remove declarations and initializations
	of variables that are now global and set in create_class_refs or
	create_field_refs.

1999-07-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (java_directory_init): Make o_globalZone,
	o_uniformIntRand, and o_uniformDblRand global refs.

1999-07-06  Alex Lancaster  <alex@santafe.edu>

	* FCall.m (add_ffi_types): Protect Java-specific code with
	HAVE_JDK ifdefs.
	([FCall_c -performCall]): Likewise.
